--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/foundation.min.css" />
 <link rel="stylesheet" href="Foundation-5/css/foundation.min.css" />
-<link rel="stylesheet" href="styles/style.css" />
 <link rel="stylesheet" href="styles/normalize.css" />
+<link rel="stylesheet" href="styles/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
 <!--[if lt IE 9]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -170,7 +170,7 @@
   <figcaption class="big"> Lorem ipsum dolor sit amet,</figcaption>
     <div id="index_form_btn" onclick="fadeIn();"  >Click here to get Quote</div><!--SeeQuote_button-->
     <figcaption>consectetur adipiscing elit.Nulla cursus dolor in enim sagittis </figcaption><!--Banner Text-->
-  <figure id="bannerimage"><img src="images/car_rental_4x4car.png" alt="Car_Rental_4x4_car" /></figure>
+  <figure id="bannerimage"><img src="images/car-rental-website-4x4-car.png" alt="car-rental-website-4x4-car" /></figure>
 </figure><!--banner end-->
 
 </div><!--content end-->
@@ -185,7 +185,7 @@
 
 <h2>Different Makes and Models</h2>
 
-<figure class="front_img"><img src="images/car_rental_luxury_car.png" alt="Car_rental_Audi_luxury_car"  /></figure>
+<figure class="front_img"><img src="images/car-rental-website-luxury-car-audi.png" alt="car-rental-website-luxury-car-audi"  /></figure>
 
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
 
@@ -196,7 +196,7 @@
 
 <h2>Weekend Car Rental Special</h2>
 
-<figure class="front_img"><img src="images/car_rental_standard_cars.png" alt="Car_Rental_4x4_Standard_car"  /></figure>
+<figure class="front_img"><img src="images/car-rental-website-weekend-car-rentals.png" alt="car-rental-website-weekend-car-rentals"  /></figure>
 
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
 
@@ -207,7 +207,7 @@
 
 <h2>Our Locations</h2>
 
-<figure class="front_img"><img src="images/car_rental_world_map.png" alt="Car_Rental-World_Map"  /></figure>
+<figure class="front_img"><img src="images/car-rental-website-locations-map.png" alt="car-rental-website-locations-map"  /></figure>
 
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
 
