--- a/app/location.html
+++ b/app/location.html
@@ -56,11 +56,11 @@
 </div>    
 </div>
 <!--header end-->  
-
+<h1>Car Hire WorldWide</h1> 
 <div class="row"><!--content-->
 <div class="large-12 medium-12 small-12 columns">
 
-<h1>Car Hire WorldWide</h1> 
+
 <article id="worldsearchform" >
 
 <h2>Over 5000 location in more than 120 countries</h2>
@@ -84,13 +84,13 @@
 <article class="destinations" >
     <ul>
         <li>A</li>
-            <li><a href="#">Africa</a></li>
+            <li><a href="#">Country</a></li>
                 <li><a href="#">Albania</a></li>
                     <li><a href="#">Afghanistan</a></li>
-                    <li><a href="#">Africa</a></li>
-                <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+                    <li><a href="#">Country</a></li>
+                <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article>
 
@@ -99,11 +99,11 @@
         <li>B</li>
             <li><a href="#">Bolivia</a></li>
                 <li><a href="#">Belgium</a></li>
-                    <li><a href="#">Africa</a></li>
-                    <li><a href="#">Africa</a></li>
-                <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+                    <li><a href="#">Country</a></li>
+                    <li><a href="#">Country</a></li>
+                <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
@@ -112,11 +112,11 @@
         <li>C</li>
             <li><a href="#">Croatia</a></li>
                 <li><a href="#">Canada</a></li>
-                    <li><a href="#">Africa</a></li>
-                    <li><a href="#">Africa</a></li>
-                <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+                    <li><a href="#">Country</a></li>
+                    <li><a href="#">Country</a></li>
+                <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
@@ -126,11 +126,11 @@
         <li><a href="#">Denmark
         </a></li>
         <li><a href="#">Dubai</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article> 
         
@@ -139,11 +139,11 @@
         <li>E</li>
         <li><a href="#">Egypt</a></li>
         <li><a href="#">Ecuador</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article> 
  
@@ -152,11 +152,11 @@
         <li>F</li>
         <li><a href="#">France</a></li>
         <li><a href="#">Finland</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
 <article class="destinations">
@@ -164,23 +164,23 @@
         <li>G</li>
         <li><a href="#">Germany</a></li>
         <li><a href="#">Ghana</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
 <article class="destinations">
         <ul>
         <li>H</li>
         <li><a href="#">Holland</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
  
@@ -188,12 +188,12 @@
         <ul>
         <li>I</li>
         <li><a href="#">India</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
  
@@ -201,207 +201,207 @@
         <ul>
         <li>J</li>
         <li><a href="#">Jamaica</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
  
 <article class="destinations">
         <ul>
         <li>K</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Khazakstan</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
 
 <article class="destinations">
         <ul>
         <li>L</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Los Angeles</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
         </ul>
 </article>
 
 <article class="destinations"> 
     <ul>
         <li>M</li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+            <li><a href="#">Mauritius</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article>
 
 <article class="destinations">
     <ul>
         <li>N</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Norway</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations"> 
     <ul>
             <li>O</li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
+            <li><a href="#">Oslo</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations">
     <ul>
             <li>P</li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
-            <li><a href="#">Africa</a></li>
+            <li><a href="#">Panama</a></li>
+            <li><a href="#">Peru</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
+            <li><a href="#">Country</a></li>
     </ul>
 </article>
 
 <article class="destinations"> 
     <ul>
         <li>Q</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Quebec</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article>
 
 <article class="destinations">
     <ul>
         <li>R</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Russia</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations">
     <ul>
         <li>S</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">South Korea</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations">
     <ul>
         <li>T</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Thailand</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations">
     <ul>
         <li>V</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Venuzuela</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations"> 
     <ul>
         <li>W</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations"> 
     <ul>
         <li>X</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article>
 
 <article class="destinations"> 
     <ul>
         <li>Y</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article> 
 
 <article class="destinations">
     <ul>
         <li>Z</li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
+        <li><a href="#">Country</a></li>
     </ul>
 </article>
 
