--- a/app/cars.html
+++ b/app/cars.html
@@ -360,7 +360,7 @@
 </div><!--row end-->  
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script> window.jQuery || document.write('<script src="scripts/jquery-1.11.2.js"><\/script>');</script>
+<script > window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>');</script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="scripts/jquery-ui-1.11.2.custom/jquery-ui.min.js"></script>      
