--- a/app/contact.html
+++ b/app/contact.html
@@ -138,7 +138,7 @@
 
 <!-- jsDelivr CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>if (!window.jQuery) { document.write('<script src="scripts/jquery-1.11.2.js"><\/script>'); }</script>
+<script > window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>');</script>
 
 <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
 <script src="Foundation-5/js/foundation.min.js"></script>
