--- a/app/index.html
+++ b/app/index.html
@@ -37,14 +37,12 @@
 
 <div class="top-bar" >
 <div class="title-bar" data-responsive-toggle="primary_nav" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle></button>
+  <button type="button" data-toggle>Menu</button>
 </div>
-
 
  <ul class="title-area"><li class="name"><h1><span >CAR</span> Rental</h1></li></ul>
   
-
-     <nav  id="primary_nav" class="top-bar-right" >
+   <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="specials.html" title="special" >Special Offers</a></li>
@@ -279,7 +277,7 @@ $("#clearQuote").click(fadeOut);}
 function fadeIn(){  $("#apDiv1").fadeIn("slow");  }
 function fadeOut(){  $("#apDiv1").fadeOut("fast");  } 
 </script>
-
+<script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
 <script src="foundation-6/js/vendor/foundation.min.js"></script>
 <script src="foundation-6/js/vendor/what-input.min.js"></script>
     
