--- a/app/cars.html
+++ b/app/cars.html
@@ -47,12 +47,12 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="specials.html" title="special" >Special Offers</a></li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="location.html">Locations</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
     </ul>    
 </nav>
  
@@ -76,12 +76,12 @@
 
 <div id="tabs">
 <ul>
-<li><a href="#tabs-1">View All</a></li>
-<li><a href="#tabs-2">USA</a></li>
-<li><a href="#tabs-3">Europe</a></li>
-<li><a href="#tabs-4">Asia</a></li>
-<li><a href="#tabs-5">Austrailia</a></li>
-<li><a href="#tabs-6">Africa</a></li>
+<li><a href="#tabs-1" alt="car-rental-view-all-tab">View All</a></li>
+<li><a href="#tabs-2" alt="car-rental-usa-tab">USA</a></li>
+<li><a href="#tabs-3" alt="car-rental-europe-tab">Europe</a></li>
+<li><a href="#tabs-4" alt="car-rental-asia-tab">Asia</a></li>
+<li><a href="#tabs-5" alt="car-rental-austrailia-tab">Austrailia</a></li>
+<li><a href="#tabs-6" alt="car-rental-africa-tab">Africa</a></li>
 </ul>
 
 <div id="tabs-1">
@@ -102,7 +102,7 @@
 
 <p>$34.50 per day</p>
 
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article >
 </article >
 
@@ -121,7 +121,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -138,7 +138,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -153,7 +153,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -170,7 +170,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -185,7 +185,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -210,7 +210,7 @@
 
 <p>$34.50 per day</p>
 
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article >
 </article >
 
@@ -229,7 +229,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -246,7 +246,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -261,7 +261,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -278,7 +278,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article >
 
@@ -293,7 +293,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#"><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
 </article>
 </article > 
 
@@ -321,7 +321,7 @@
 <figure>
 <img src="images/car-rental-website-luxury-car-audi.png" alt="car-rental-website-luxury-car-audi"  /></figure>
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
-<div class="link_btn"><a href="cars.html" >Learn More</a></div>  
+<div class="link_btn"><a href="cars.html" alt="car-rental-cars-page">Learn More</a></div>  
 </div>
 <!--info_box2 end-->
 
@@ -331,7 +331,7 @@
 <figure>
 <img src="images/car-rental-website-locations-map.png" alt="car-rental-website-locations-map"  /></figure>
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
-<div class="link_btn"><a href="location.html" >All Locations</a></div>
+<div class="link_btn"><a href="location.html" alt="car-rental-locations-page">All Locations</a></div>
 </div>
 <!--info_box3 end-->
 
@@ -346,12 +346,12 @@
        
    
       <ul id="footer_nav">
-        <li><a href="index.html" tabindex="1">Home</a></li>
-          <li><a href="specials.html" tabindex="2">Specials</a></li>
-            <li><a href="cars.html">Cars</a></li>
-            <li><a href="location.html">Locations</a></li>
-          <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
       </ul>
    
       
