--- a/app/location.html
+++ b/app/location.html
@@ -46,12 +46,12 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="specials.html" title="special" >Special Offers</a></li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="location.html">Locations</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+       <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
     </ul>    
 </nav>
  
@@ -424,12 +424,12 @@
        
    
       <ul id="footer_nav">
-        <li><a href="index.html" tabindex="1">Home</a></li>
-          <li><a href="specials.html" tabindex="2">Specials</a></li>
-            <li><a href="cars.html">Cars</a></li>
-            <li><a href="location.html">Locations</a></li>
-          <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
       </ul>
    
       
