--- a/app/specials.html
+++ b/app/specials.html
@@ -47,12 +47,12 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="specials.html" title="special" >Special Offers</a></li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="location.html">Locations</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+       <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
     </ul>    
 </nav>
  
@@ -70,12 +70,12 @@
 
 <div id="tabs">
 <ul>
-<li><a href="#tabs-1">View All</a></li>
-<li><a href="#tabs-2">Economy</a></li>
-<li><a href="#tabs-3">Small</a></li>
-<li><a href="#tabs-4">Standard</a></li>
-<li><a href="#tabs-5">Premium</a></li>
-<li><a href="#tabs-6">Luxury</a></li>
+<li><a href="#tabs-1" alt="car-rental-view-all-tab">View All</a></li>
+<li><a href="#tabs-2" alt="car-rental-Economy-tab">Economy</a></li>
+<li><a href="#tabs-3" alt="car-rental-Small-tab">Small</a></li>
+<li><a href="#tabs-4" alt="car-rental-Standard-tab">Standard</a></li>
+<li><a href="#tabs-5" alt="car-rental-Premium-tab">Premium</a></li>
+<li><a href="#tabs-6" alt="car-rental-Luxury-tab">Luxury</a></li>
 </ul>
 
 <!--tab 1-->
@@ -522,12 +522,12 @@ Advance booking time: 4 hours
 
 
 <ul id="footer_nav">
-<li><a href="index.html" tabindex="1">Home</a></li>
-<li><a href="specials.html" tabindex="2">Specials</a></li>
-<li><a href="cars.html">Cars</a></li>
-<li><a href="location.html">Locations</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="contact.html">Contact</a></li>
+    <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
 </ul>
 
 
