--- a/app/401.html
+++ b/app/401.html
@@ -46,7 +46,7 @@
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#" title="special" >Special Offers</a></li>
+        <li><a href="#">Special Offers</a></li>
         <li><a href="#">Cars</a></li>
         <li><a href="#">Locations</a></li>
         <li><a href="#">About</a></li>
@@ -95,12 +95,12 @@
 <div class="large-12 medium-12 small-12 columns">
 
 <ul id="footer_nav">
-<li><a href="#" >Home</a></li>
-<li><a href="#">Specials</a></li>
-<li><a href="#">Cars</a></li>
-<li><a href="#">Locations</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Contact</a></li>
+    <li><a href="#" alt="car-rental-home-page">Home</a></li>
+        <li><a href="#" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="#" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="#" "car-rental-locations-page">Locations</a></li>
+        <li><a href="#" alt="car-rental-about-page">About</a></li>
+        <li><a href="#" alt="car-rental-contact-page">Contact</a></li>
 </ul>
 
 
