--- a/app/contact.html
+++ b/app/contact.html
@@ -45,12 +45,12 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="specials.html" title="special" >Special Offers</a></li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="location.html">Locations</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
     </ul>    
 </nav>
  
@@ -102,9 +102,9 @@
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>  
 <form action="" method="post" class="newsletter" data-abide>
 <input name="NAME" type="text" placeholder="Name" required pattern="[a-zA-Z]+" />
-<small class="error">Name must be letters.</small>
+<!--<small class="error">Name must be letters.</small>-->
 <input name="EMAIL" type="email" placeholder="Email" required/>
-<small class="error">A valid email address is required.</small>
+<!--<small class="error">A valid email address is required.</small>-->
 <input type="submit" class="link_btn" value="SUBSCRIBE"  /> 
 </form>
 </article>
@@ -119,12 +119,12 @@
        
    
       <ul id="footer_nav">
-        <li><a href="index.html" tabindex="1">Home</a></li>
-          <li><a href="specials.html" tabindex="2">Specials</a></li>
-            <li><a href="cars.html">Cars</a></li>
-            <li><a href="location.html">Locations</a></li>
-          <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
+        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
+        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
+        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
+        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
+        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
       </ul>
    
       
